--- a/rhoso-intro/1/ch3-multitenancy/s1-domains-projects-lecture.html
+++ b/rhoso-intro/1/ch3-multitenancy/s1-domains-projects-lecture.html
@@ -264,8 +264,10 @@ Work in Progress
 <div class="paragraph">
 <p>OpenStack clusters typically run many applications and are managed by many Operators. OpenStack does not prescribe a way of grouping applications and Operators, but provides a general mechanism for enforcing many possible organizational structures, based on domains and projects.</p>
 </div>
-<div class="paragraph">
-<p>[ Figure of projects, domains, users, groups, and API resources ]</p>
+<div class="imageblock">
+<div class="content">
+<img src="_images/s1-domains-projects-lecture-fig1.png" alt="s1 domains projects lecture fig1">
+</div>
 </div>
 <div class="paragraph">
 <p>On the structure of domains and projects, OpenStack services enforce authorization checks, which may allow or deny a user to manage API respources, enabling separation of concerns, for example: an Operator may manage applications from some projects but not from others.</p>
@@ -293,12 +295,9 @@ Work in Progress
 <p>Resource domains, that include projects with application resources such as servers and networks;</p>
 </li>
 <li>
-<p>User domains, which include users and groups and usually no projects.</p>
+<p>Authentication domains, which include users and groups and usually no projects.</p>
 </li>
 </ol>
-</div>
-<div class="paragraph">
-<p>[ Figure of domains vs projets vs external identity vs API resources ]</p>
 </div>
 <div class="paragraph">
 <p>This approach enables you to manage your organizational chart independently of your applications. It also enables managing scenarios such as bringing together two originally independent organizations, like two companies that merged. Each organization can be a distinct domain, and each domain can have its own authentication settings, possibly using different external identity services.</p>
@@ -315,10 +314,10 @@ Work in Progress
 <p>OpenStack API resources do not have unique names. For some resource types, names have to be unique at the project or domain level, but resources of the same type from different domains or projects can use the same name. For some resource types, the name is not expected to be unique at all, and multiple instances of the same resource, on the same project, could use the same name.</p>
 </div>
 <div class="paragraph">
-<p>OpenStack API resources are uniquely identified by an UUID assigned by its service. All OpenStack API calls which create new resource instances retuirn the UUID of the new resource, and this is the only guaranteed way of referencing the resource later on. While you can change the name of a resource, you cannot change its UUID.</p>
+<p>OpenStack API resources are uniquely identified by an UUID assigned by its service. All OpenStack API calls which create new resource instances return the UUID of the new resource, and this is the only guaranteed way of referencing the resource later on. While you can change the name of a resource, you cannot change its UUID.</p>
 </div>
 <div class="paragraph">
-<p>Most OpenStack client commands will happy take the name of a resource and do the best to find the resource at the specified current project and domain scopes, but if they cannot you are expected to retry the command providing an UUID.</p>
+<p>Most OpenStack client commands will accept names of resources and retrieve their UUIDs at the specified current project and domain scopes, but if they cannot you are expected to retry the command providing the UUIDs of API resources you need. When one API resoruce references other API resources, it is always by UUID, never by name. This means API resource names could change at any time.</p>
 </div>
 <div class="paragraph">
 <p>Some OpenStack API resources also accept zero or more tags, which you use for arbitrary grouping of resources. OpenStack services do not give any meaning to tags, but they help Operators manage clusters with a large number of resources.</p>
@@ -330,7 +329,7 @@ Work in Progress
 <p>In the previous chapter, we learned that Keystone authenticates the identity of a user, but Keystone itself makes no authorization decisions: these belong to individual OpenStack services.</p>
 </div>
 <div class="paragraph">
-<p>Keystone does populate access token with data, such as originating domain and project of a user, and the list of groups and roles a user is member of. OpenStack services can use any of that information to make authentication decisions, and they are expected to follow a few conventions, among them:</p>
+<p>Keystone does populate access tokens with data, such as originating domain and project of a user, and the list of groups and roles a user is member of. OpenStack services can use any of that information to make authentication decisions, and they are expected to follow a few conventions, among them:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -376,16 +375,16 @@ Remember no user or group owns OpenStack API resources. Servers, networks, volum
 <div class="sect2">
 <h3 id="_openstack_users_and_groups"><a class="anchor" href="#_openstack_users_and_groups"></a>OpenStack Users and Groups</h3>
 <div class="paragraph">
-<p>It is possible to create and manage users and groups as Keystone API resources, but it is not recommended. Those users and groups are nice for small scenarios, like test clusters and proofs-of-concept, but the recommended approach is deleting user and group management to external identity systems based on the LDAP or OIDC standards.</p>
+<p>It is possible to create and manage users and groups as Keystone API resources, but it is not recommended. Those local users and groups are nice for small scenarios, like test clusters and proofs-of-concept, but the recommended approach is delegating user and group management to external enterprise identity systems based on the LDAP or OIDC standards.</p>
 </div>
 <div class="paragraph">
-<p>One Keystone domain can refer to only one authentication backend. If the authentication backend is an external identity system, that domain cannot set its own users and groups using Keystone APIs. This is a reason some organizations create user domains and resource domains: so they can create multiple user domains, each referring to a different identity system.</p>
+<p>One Keystone domain can refer to only one authentication backend. This is a reason some organizations create user domains and resource domains: so they can create multiple user domains, each referring to a different identity system.</p>
 </div>
 <div class="paragraph">
-<p>Traditional datacenters may be used to the LDAP technology, popular with identity management systems like Microsoft Active Directory (MSAD) and Red Hat Enterprise Linux Identity Management (RHEL IdM) but this technology is losing ground for identity management systems compatible with OpenID Connect (OIDC), which are based on the OAuth standard and the core of most cloud services.</p>
+<p>Traditional datacenters may be used to the LDAP technology, popular with identity management systems like Microsoft Active Directory (MSAD) and Red Hat Enterprise Linux Identity Management (RHEL IdM) but this technology is losing ground for identity management systems compatible with OpenID Connect (OIDC), which are based on the OAuth standard.</p>
 </div>
 <div class="paragraph">
-<p>Nowadays, it is advisable to prefer OIDC identity systems over LDAP systems, especially for sharing authentication backends with modern cloud-native and containerized IT infrastructure applications, such as CI/CD systems. Some organizations stick with LDAP systems because most operating systems cannot authenticate local users using OIDC, but most of the times there are not reason to make OpenStack compute nodes members of your MSAD or RHEL IdM authetication domain.</p>
+<p>It is advisable to prefer OIDC identity systems over LDAP systems, especially for sharing authentication backends with modern cloud-native and containerized IT infrastructure applications, such as CI/CD systems. Some organizations stick with LDAP systems because populst operating systems cannot authenticate users using OIDC, but most of the times there are not reason to make OpenStack compute nodes themselves members of an MSAD or RHEL IdM authetication domain.</p>
 </div>
 </div>
 <div class="sect2">
@@ -403,7 +402,7 @@ Remember no user or group owns OpenStack API resources. Servers, networks, volum
 <h2 id="_openstack_resource_quotas"><a class="anchor" href="#_openstack_resource_quotas"></a>OpenStack Resource Quotas</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Like access control, compute resource quotas are set and enforced by each individual OpenStack service. Like access control, it depends on data managed by Keystone, but each service makes its own quota decisions.</p>
+<p>Like access control, compute resource quotas are set and enforced by each individual OpenStack service. Like access control, it depends on data managed by Keystone, but each service makes its own quota enforcement decisions.</p>
 </div>
 <div class="admonitionblock tip">
 <table>
@@ -417,8 +416,10 @@ OpenStack Nova used to provide per-user quotas but they are deprecated and are n
 </tr>
 </table>
 </div>
-<div class="paragraph">
-<p>[ Figure of API resource and compute resource quota types ]</p>
+<div class="imageblock">
+<div class="content">
+<img src="_images/s1-domains-projects-lecture-fig2.png" alt="s1 domains projects lecture fig2">
+</div>
 </div>
 <div class="paragraph">
 <p>Compute resource quotas can only prevent the creation or changes to API resource instances. They are not designed to enforce dynamic usage quotas, but to ensure applications get some guaranteed capacity and that compute nodes are not overloaded with more server instances they can handle.</p>
@@ -430,7 +431,7 @@ OpenStack Nova used to provide per-user quotas but they are deprecated and are n
 <i class="fa icon-note" title="Note"></i>
 </td>
 <td class="content">
-Here "compute" means anything required to run application, and includes storage and network resources. It&#8217;s not API resources from Nova.
+Here "compute" means anything required to run application, and could includes storage and network capacity. It does not reffer to API resources from Nova.
 </td>
 </tr>
 </table>
@@ -444,13 +445,13 @@ Here "compute" means anything required to run application, and includes storage 
 <p>Some quotas affect the number of instances you can create, of a given API resource type, inside a project. That class of quota limts the number of server instances, floating ips, virtual networks, volumes, and so on.</p>
 </div>
 <div class="paragraph">
-<p>Other quotas affect the quantity, or capacity, of a compute resource that a project can consume, aggregating the consuption from all server instances in the project. That class of quota limits the number of vCPUs, total memory, total storage space space, and so on.</p>
+<p>Other quotas affect the quantity, or capacity, of a compute resource that a project can consume, aggregating the consuption from all server instances in the project. That class of quota limits total quantity of vCPUs, total memory aggregated from all server instances, total disk space from all volumes, and so on.</p>
 </div>
 </div>
 <div class="sect2">
 <h3 id="_object_storage_quotas"><a class="anchor" href="#_object_storage_quotas"></a>Object Storage Quotas</h3>
 <div class="paragraph">
-<p>Remember that quotas are defined and enforced by each OpenStack service themselves, and this allows for some inconsistencies and also for purposeful exceptions. One such exception is Swift, which provides both API resource and compute resource storage quotas on accounts.</p>
+<p>Remember that quotas are defined and enforced by each OpenStack service themselves, and this allows for some inconsistencies and also for purposeful exceptions. One such exception is Swift, which provides both API resource and compute resource storage quotas per storage account.</p>
 </div>
 <div class="paragraph">
 <p>Object storage accounts enable external applications to save and retrieve objects without directly authenticating to Keystone. They can represent individual users of Swift object storage instead of individual applications.</p>
